Translate tf_hub_generative_image_module.ipynb via GitLocalize

--- a/site/ko/hub/tutorials/tf_hub_generative_image_module.ipynb
+++ b/site/ko/hub/tutorials/tf_hub_generative_image_module.ipynb
@@ -78,9 +78,10 @@
       "source": [
         "This Colab demonstrates use of a TF-Hub module based on a generative adversarial network (GAN). The module maps from N-dimensional vectors, called latent space, to RGB images.\n",
         "\n",
-        "Two examples are provided:\n",
-        "* **Mapping** from latent space to images, and\n",
-        "* Given a target image, **using gradient descent to find** a latent vector that generates an image similar to the target image."
+        "두 가지 예가 제공됩니다.\n",
+        "\n",
+        "- 잠재 공간에서 이미지로 **매핑**\n",
+        "- Given a target image, **using gradient descent to find** a latent vector that generates an image similar to the target image."
       ]
     },
     {
@@ -89,11 +90,11 @@
         "id": "v4XGxDrCkeip"
       },
       "source": [
-        "## Optional prerequisites\n",
+        "## 선택적 전제 조건\n",
         "\n",
-        "* Familiarity with [low level Tensorflow concepts](https://www.tensorflow.org/guide/eager).\n",
-        "* [Generative Adversarial Network](https://en.wikipedia.org/wiki/Generative_adversarial_network) on Wikipedia.\n",
-        "* Paper on Progressive GANs: [Progressive Growing of GANs for Improved Quality, Stability, and Variation](https://arxiv.org/abs/1710.10196)."
+        "- Familiarity with [low level Tensorflow concepts](https://www.tensorflow.org/guide/eager).\n",
+        "- [Generative Adversarial Network](https://en.wikipedia.org/wiki/Generative_adversarial_network) on Wikipedia.\n",
+        "- Paper on Progressive GANs: [Progressive Growing of GANs for Improved Quality, Stability, and Variation](https://arxiv.org/abs/1710.10196)."
       ]
     },
     {
@@ -112,7 +113,7 @@
         "id": "Q4DN769E2O_R"
       },
       "source": [
-        "## Setup"
+        "## 설정"
       ]
     },
     {
@@ -204,7 +205,7 @@
         "id": "f5EESfBvukYI"
       },
       "source": [
-        "## Latent space interpolation"
+        "## 잠재 공간 보간"
       ]
     },
     {
@@ -418,13 +419,15 @@
       },
       "source": [
         "### Playing with the above example\n",
+        "\n",
         "If image is from the module space, the descent is quick and converges to a reasonable sample. Try out descending to an image that is **not from the module space**. The descent will only converge if the image is reasonably close to the space of training images.\n",
         "\n",
         "How to make it descend faster and to a more realistic image? One can try:\n",
-        "* using different loss on the image difference, e.g. quadratic,\n",
-        "* using different regularizer on the latent vector,\n",
-        "* initializing from a random vector in multiple runs,\n",
-        "* etc.\n"
+        "\n",
+        "- using different loss on the image difference, e.g. quadratic,\n",
+        "- using different regularizer on the latent vector,\n",
+        "- initializing from a random vector in multiple runs,\n",
+        "- 기타\n"
       ]
     }
   ],
