Translate tf_hub_generative_image_module.ipynb via GitLocalize

--- a/site/ko/hub/tutorials/tf_hub_generative_image_module.ipynb
+++ b/site/ko/hub/tutorials/tf_hub_generative_image_module.ipynb
@@ -42,7 +42,7 @@
         "id": "CxmDMK4yupqg"
       },
       "source": [
-        "# Generate Artificial Faces with CelebA Progressive GAN Model\n"
+        "# CelebA Progressive GAN 모델로 인공 얼굴 생성하기\n"
       ]
     },
     {
@@ -53,19 +53,17 @@
       "source": [
         "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
         "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://www.tensorflow.org/hub/tutorials/tf_hub_generative_image_module\"><img src=\"https://www.tensorflow.org/images/tf_logo_32px.png\" />View on TensorFlow.org</a>\n",
+        "    <a target=\"_blank\" href=\"https://www.tensorflow.org/hub/tutorials/tf_hub_generative_image_module\"><img src=\"https://www.tensorflow.org/images/tf_logo_32px.png\">View on TensorFlow.org</a>\n",
         "  </td>\n",
         "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/hub/blob/master/examples/colab/tf_hub_generative_image_module.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/hub/blob/master/examples/colab/tf_hub_generative_image_module.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\">Run in Google Colab</a>\n",
+        "  </td>\n",
+        "  <td><a target=\"_blank\" href=\"https://github.com/tensorflow/hub/blob/master/examples/colab/tf_hub_generative_image_module.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\">GitHub에서 보기</a></td>\n",
+        "  <td>\n",
+        "    <a href=\"https://storage.googleapis.com/tensorflow_docs/hub/examples/colab/tf_hub_generative_image_module.ipynb\"><img src=\"https://www.tensorflow.org/images/download_logo_32px.png\">Download notebook</a>\n",
         "  </td>\n",
         "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://github.com/tensorflow/hub/blob/master/examples/colab/tf_hub_generative_image_module.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />View on GitHub</a>\n",
-        "  </td>\n",
-        "  <td>\n",
-        "    <a href=\"https://storage.googleapis.com/tensorflow_docs/hub/examples/colab/tf_hub_generative_image_module.ipynb\"><img src=\"https://www.tensorflow.org/images/download_logo_32px.png\" />Download notebook</a>\n",
-        "  </td>\n",
-        "  <td>\n",
-        "    <a href=\"https://tfhub.dev/google/progan-128/1\"><img src=\"https://www.tensorflow.org/images/hub_logo_32px.png\" />See TF Hub model</a>\n",
+        "    <a href=\"https://tfhub.dev/google/progan-128/1\"><img src=\"https://www.tensorflow.org/images/hub_logo_32px.png\">See TF Hub model</a>\n",
         "  </td>\n",
         "</table>"
       ]
@@ -76,12 +74,12 @@
         "id": "Sy553YSVmYiK"
       },
       "source": [
-        "This Colab demonstrates use of a TF-Hub module based on a generative adversarial network (GAN). The module maps from N-dimensional vectors, called latent space, to RGB images.\n",
+        "이 Colab은 GAN(Generative Adversarial Network)을 기반으로 하는 TF-Hub 모듈의 사용 예를 보여줍니다. 이 모듈은 잠재 공간이라고 하는 N-차원 벡터에서 RGB 이미지로 매핑합니다.\n",
         "\n",
         "두 가지 예가 제공됩니다.\n",
         "\n",
         "- 잠재 공간에서 이미지로 **매핑**\n",
-        "- Given a target image, **using gradient descent to find** a latent vector that generates an image similar to the target image."
+        "- 대상 이미지를 고려하여 대상 이미지와 유사한 이미지를 생성하는 잠재 벡터를 **찾기 위해 경사 하강 사용**"
       ]
     },
     {
@@ -92,9 +90,9 @@
       "source": [
         "## 선택적 전제 조건\n",
         "\n",
-        "- Familiarity with [low level Tensorflow concepts](https://www.tensorflow.org/guide/eager).\n",
-        "- [Generative Adversarial Network](https://en.wikipedia.org/wiki/Generative_adversarial_network) on Wikipedia.\n",
-        "- Paper on Progressive GANs: [Progressive Growing of GANs for Improved Quality, Stability, and Variation](https://arxiv.org/abs/1710.10196)."
+        "- [하위 수준의 Tensorflow 개념](https://www.tensorflow.org/guide/low_level_intro)에 익숙해야 합니다.\n",
+        "- Wikipedia에서 [GAN(Generative Adversarial Network)](https://en.wikipedia.org/wiki/Generative_adversarial_network)을 확인합니다.\n",
+        "- Progressive GAN에 관한 논문을 참조합니다([Progressive Growing of GANs for Improved Quality, Stability, and Variation](https://arxiv.org/abs/1710.10196))."
       ]
     },
     {
@@ -103,8 +101,9 @@
         "id": "HK3Q2vIaVw56"
       },
       "source": [
-        "### More models\n",
-        "[Here](https://tfhub.dev/s?module-type=image-generator) you can find all models currently hosted on [tfhub.dev](tfhub.dev) that can generate images."
+        "### 더 많은 모델\n",
+        "\n",
+        "[여기](https://tfhub.dev/s?module-type=image-generator)에서 이미지를 생성할 수 있는, [tfhub.dev](tfhub.dev)에서 현재 호스팅되는 모든 모델을 찾을 수 있습니다."
       ]
     },
     {
@@ -214,9 +213,9 @@
         "id": "nJb9gFmRvynZ"
       },
       "source": [
-        "### Random vectors\n",
+        "### 무작위 벡터\n",
         "\n",
-        "Latent space interpolation between two randomly initialized vectors. We will use a TF-Hub module [progan-128](https://tfhub.dev/google/progan-128/1) that contains a pre-trained Progressive GAN."
+        "무작위로 초기화된 두 벡터 사이의 잠재 공간을 보간합니다. 사전 훈련된 Progressive GAN이 포함된 TF-Hub 모듈 [progan-128](https://tfhub.dev/google/progan-128/1)을 사용합니다."
       ]
     },
     {
@@ -260,8 +259,9 @@
         "id": "L9-uXoTHuXQC"
       },
       "source": [
-        "## Finding closest vector in latent space\n",
-        "Fix a target image. As an example use an image generated from the module or upload your own."
+        "## 잠재 공간에서 가장 가까운 벡터 찾기\n",
+        "\n",
+        "대상 이미지를 수정합니다. 예를 들어, 모듈에서 생성된 이미지를 사용하거나 고유한 이미지를 업로드합니다."
       ]
     },
     {
@@ -299,7 +299,7 @@
         "id": "rBIt3Q4qvhuq"
       },
       "source": [
-        "After defining a loss function between the target image and the image generated by a latent space variable, we can use gradient descent to find variable values that minimize the loss."
+        "대상 이미지와 잠재 공간 변수에 의해 생성된 이미지 사이의 손실 함수를 정의한 후, 경사 하강을 사용하여 손실을 최소화하는 변수 값을 찾을 수 있습니다."
       ]
     },
     {
@@ -398,7 +398,7 @@
         "id": "GGKfuCdfPQKH"
       },
       "source": [
-        "Compare the result to the target:"
+        "결과를 대상과 비교합니다."
       ]
     },
     {
@@ -418,15 +418,15 @@
         "id": "tDt15dLsJwMy"
       },
       "source": [
-        "### Playing with the above example\n",
+        "### 위의 예를 이용한 추가 작업\n",
         "\n",
-        "If image is from the module space, the descent is quick and converges to a reasonable sample. Try out descending to an image that is **not from the module space**. The descent will only converge if the image is reasonably close to the space of training images.\n",
+        "이미지가 모듈 공간의 이미지인 경우, 하강이 빠르고 합리적인 샘플로 수렴합니다. **모듈 공간의 이미지가 아닌** 이미지로 하강해 보세요. 이미지가 훈련 이미지 공간에 상당히 가까운 경우에만 하강이 수렴합니다.\n",
         "\n",
-        "How to make it descend faster and to a more realistic image? One can try:\n",
+        "하강이 더 빠르고 더 현실적인 이미지를 만드는 방법은? 다음을 시도해볼 수 있습니다.\n",
         "\n",
-        "- using different loss on the image difference, e.g. quadratic,\n",
-        "- using different regularizer on the latent vector,\n",
-        "- initializing from a random vector in multiple runs,\n",
+        "- 이미지 차이에 대해 다른 손실을 사용합니다(예: 2차 방정식).\n",
+        "- 잠재 벡터에 다른 regularizer를 사용합니다.\n",
+        "- 여러 번의 실행 후에 무작위 벡터에서 초기화합니다.\n",
         "- 기타\n"
       ]
     }
