Translate basic_training_loops.ipynb via GitLocalize

--- a/site/ko/guide/basic_training_loops.ipynb
+++ b/site/ko/guide/basic_training_loops.ipynb
@@ -37,7 +37,7 @@
         "id": "hrXv0rU9sIma"
       },
       "source": [
-        "# Basic training loops"
+        "# 기본 훈련 루프"
       ]
     },
     {
@@ -79,7 +79,7 @@
         "id": "3LXMVuV0VhDr"
       },
       "source": [
-        "## Setup"
+        "## 설정"
       ]
     },
     {
@@ -103,12 +103,12 @@
         "\n",
         "Solving a machine learning problem usually consists of the following steps:\n",
         "\n",
-        " - Obtain training data.\n",
-        " - Define the model.\n",
-        " - Define a loss function.\n",
-        " - Run through the training data, calculating loss from the ideal value\n",
-        " - Calculate gradients for that loss and use an *optimizer* to adjust the variables to fit the data.\n",
-        " - Evaluate your results.\n",
+        "- 훈련 데이터를 얻습니다.\n",
+        "- Define the model.\n",
+        "- 손실 함수를 정의합니다.\n",
+        "- 훈련 데이터를 실행하여 이상적인 값에서 손실을 계산합니다.\n",
+        "- Calculate gradients for that loss and use an *optimizer* to adjust the variables to fit the data.\n",
+        "- Evaluate your results.\n",
         "\n",
         "For illustration purposes, in this guide you'll develop a simple linear model, $f(x) = x * W + b$, which has two variables: $W$ (weights) and $b$ (bias).\n",
         "\n",
@@ -121,7 +121,7 @@
         "id": "qutT_fkl_CBc"
       },
       "source": [
-        "## Data\n",
+        "## 데이터\n",
         "\n",
         "Supervised learning uses *inputs* (usually denoted as *x*) and *outputs* (denoted *y*, often called *labels*).  The goal is to learn from paired inputs and outputs so that you can predict the value of an output from an input.\n",
         "\n",
@@ -288,10 +288,10 @@
         "\n",
         "The training loop consists of repeatedly doing three tasks in order:\n",
         "\n",
-        "* Sending a batch of inputs through the model to generate outputs\n",
-        "* Calculating the loss by comparing the outputs to the output (or label)\n",
-        "* Using gradient tape to find the gradients\n",
-        "* Optimizing the variables with those gradients\n",
+        "- 모델을 통해 입력 배치를 전송하여 출력 생성\n",
+        "- Calculating the loss by comparing the outputs to the output (or label)\n",
+        "- Using gradient tape to find the gradients\n",
+        "- Optimizing the variables with those gradients\n",
         "\n",
         "For this example, you can train the model using [gradient descent](https://en.wikipedia.org/wiki/Gradient_descent).\n",
         "\n",
@@ -517,7 +517,7 @@
         "id": "vPnIVuaSJwWz"
       },
       "source": [
-        "## Next steps\n",
+        "## 다음 단계\n",
         "\n",
         "In this guide, you have seen how to use the core classes of tensors, variables, modules, and gradient tape to build and train a model, and further how those ideas map to Keras.\n",
         "\n",
