--- a/site/ko/guide/basic_training_loops.ipynb
+++ b/site/ko/guide/basic_training_loops.ipynb
@@ -68,7 +68,7 @@
         "id": "k2o3TTG4TFpt"
       },
       "source": [
-        "In the previous guides, you have learned about [tensors](./tensor.ipynb), [variables](./variable.ipynb), [gradient tape](autodiff.ipynb), and [modules](./intro_to_modules.ipynb).  In this guide, you will fit these all together to train models.\n",
+        "이전 가이드에서 [텐서](./tensor.ipynb), [변수](./variable.ipynb), [그래디언트 테이프](autodiff.ipynb) , [모듈](./intro_to_modules.ipynb)에 관해 배웠습니다. 이 가이드에서는 모델을 훈련하기 위해 이들 요소를 모두 맞춤 조정합니다.\n",
         "\n",
         "TensorFlow also includes the [tf.Keras API](keras/overview.ipynb), a high-level neural network API that provides useful abstractions to reduce boilerplate.  However, in this guide, you will use basic classes."
       ]
@@ -99,18 +99,18 @@
         "id": "iKD__8kFCKNt"
       },
       "source": [
-        "## Solving machine learning problems\n",
+        "## 머신러닝 문제 해결하기\n",
         "\n",
-        "Solving a machine learning problem usually consists of the following steps:\n",
+        "머신러닝 문제의 해결은 일반적으로 다음 단계로 구성됩니다.\n",
         "\n",
         "- 훈련 데이터를 얻습니다.\n",
-        "- Define the model.\n",
+        "- 모델을 정의합니다.\n",
         "- 손실 함수를 정의합니다.\n",
         "- 훈련 데이터를 실행하여 이상적인 값에서 손실을 계산합니다.\n",
         "- Calculate gradients for that loss and use an *optimizer* to adjust the variables to fit the data.\n",
-        "- Evaluate your results.\n",
+        "- 결과를 평가합니다.\n",
         "\n",
-        "For illustration purposes, in this guide you'll develop a simple linear model, $f(x) = x * W + b$, which has two variables: $W$ (weights) and $b$ (bias).\n",
+        "설명을 위해 이 가이드에서는 $W$(가중치) 및 $b$(바이어스)의 두 가지 변수가 있는 간단한 선형 모델 $f(x) = x * W + b$를 개발합니다.\n",
         "\n",
         "This is the most basic of machine learning problems:  Given $x$ and $y$, try to find the slope and offset of a line via  [simple linear regression](https://en.wikipedia.org/wiki/Linear_regression#Simple_and_multiple_linear_regression)."
       ]
@@ -125,9 +125,9 @@
         "\n",
         "Supervised learning uses *inputs* (usually denoted as *x*) and *outputs* (denoted *y*, often called *labels*).  The goal is to learn from paired inputs and outputs so that you can predict the value of an output from an input.\n",
         "\n",
-        "Each input of your data, in TensorFlow, is almost always represented by a tensor, and is often a vector. In supervised training, the output (or value you'd like to predict) is also a tensor.\n",
+        "TensorFlow에서 데이터의 각 입력은 거의 항상 텐서로 표현되며, 종종 벡터입니다. 지도 학습에서 출력(또는 예측하려는 값)도 텐서입니다.\n",
         "\n",
-        "Here is some data synthesized by adding Gaussian (Normal) noise to points along a line."
+        "다음은 선을 따라 점에 가우시안 (정규 분포) 노이즈를 추가하여 합성된 데이터입니다."
       ]
     },
     {
@@ -175,7 +175,7 @@
         "id": "UH95XUzhL99d"
       },
       "source": [
-        "Tensors are usually gathered together in *batches*, or groups of inputs and outputs stacked together.  Batching can confer some training benefits and works well with accelerators and vectorized computation.  Given how small this dataset is, you can treat the entire dataset as a single batch."
+        "텐서는 일반적으로 *배치* 또는 입력과 출력이 함께 쌓인 그룹의 형태로 수집됩니다. 일괄 처리는 몇 가지 훈련 이점을 제공할 수 있으며 가속기 및 벡터화된 계산에서 잘 동작합니다. 데이터세트가 얼마나 작은지를 고려할 때 전체 데이터세트를 단일 배치로 처리할 수 있습니다."
       ]
     },
     {
@@ -184,9 +184,9 @@
         "id": "gFzH64Jn9PIm"
       },
       "source": [
-        "## Define the model\n",
+        "## 모델 정의하기\n",
         "\n",
-        "Use `tf.Variable` to represent all weights in a model.  A `tf.Variable` stores a value and provides this in tensor form as needed.  See the [variable guide](./variable.ipynb) for more details.\n",
+        "`tf.Variable`을 사용하여 모델의 모든 가중치를 나타냅니다. `tf.Variable`은 값을 저장하고 필요에 따라 텐서 형식으로 제공합니다. 자세한 내용은 [변수 가이드](./variable.ipynb)를 참조하세요.\n",
         "\n",
         "Use `tf.Module` to encapsulate the variables and the computation.  You could use any Python object, but this way it can be easily saved.\n",
         "\n",
@@ -236,9 +236,9 @@
         "id": "xa6j_yXa-j79"
       },
       "source": [
-        "### Define a loss function\n",
+        "### 손실 함수 정의하기\n",
         "\n",
-        "A loss function measures how well the output of a model for a given input matches the target output. The goal is to minimize this difference during training. Define the standard L2 loss, also known as the \"mean squared\" error:"
+        "손실 함수는 주어진 입력에 대한 모델의 출력이 목표 출력과 얼마나 잘 일치하는지 측정합니다. 목표는 훈련 중에 이러한 차이를 최소화하는 것입니다. \"평균 제곱\" 오류라고도 하는 표준 L2 손실을 정의합니다."
       ]
     },
     {
@@ -260,7 +260,7 @@
         "id": "-50nq-wPBsAW"
       },
       "source": [
-        "Before training the model, you can visualize the loss value by plotting the model's predictions in red and the training data in blue:"
+        "모델을 훈련하기 전에 모델의 예측을 빨간색으로, 훈련 데이터를 파란색으로 플롯하여 손실값을 시각화할 수 있습니다."
       ]
     },
     {
@@ -284,18 +284,18 @@
         "id": "sSDP-yeq_4jE"
       },
       "source": [
-        "### Define a training loop\n",
+        "### 훈련 루프 정의하기\n",
         "\n",
-        "The training loop consists of repeatedly doing three tasks in order:\n",
+        "훈련 루프는 순서대로 3가지 작업을 반복적으로 수행하는 것으로 구성됩니다.\n",
         "\n",
         "- 모델을 통해 입력 배치를 전송하여 출력 생성\n",
         "- Calculating the loss by comparing the outputs to the output (or label)\n",
-        "- Using gradient tape to find the gradients\n",
-        "- Optimizing the variables with those gradients\n",
+        "- 그래디언트 테이프를 사용하여 그래디언트 찾기\n",
+        "- 해당 그래디언트로 변수 최적화\n",
         "\n",
-        "For this example, you can train the model using [gradient descent](https://en.wikipedia.org/wiki/Gradient_descent).\n",
+        "이 예제에서는 [경사 하강법](https://en.wikipedia.org/wiki/Gradient_descent)을 사용하여 모델을 훈련할 수 있습니다.\n",
         "\n",
-        "There are many variants of the gradient descent scheme that are captured in `tf.keras.optimizers`. But in the spirit of building from first principles, here you will implement the basic math yourself with the help of `tf.GradientTape` for automatic differentiation and `tf.assign_sub` for decrementing a value (which combines `tf.assign` and `tf.sub`):"
+        "`tf.keras.optimizers`에서 캡처되는 경사 하강법 체계에는 다양한 변형이 있습니다. 하지만 첫 번째 원칙을 준수하는 의미에서, 기본적인 수학을 직접 구현할 것입니다. 자동 미분을 위한 `tf.GradientTape` 및 값 감소를 위한 `tf.assign_sub`(`tf.assign`과 `tf.sub`를 결합하는 값)의 도움을 받습니다."
       ]
     },
     {
@@ -327,7 +327,7 @@
         "id": "RwWPaJryD2aN"
       },
       "source": [
-        "For a look at training, you can send the same batch of *x* an *y* through the training loop, and see how `W` and `b` evolve."
+        "훈련을 살펴보려면 훈련 루프를 통해 *x* 및 *y*의 같은 배치를 보내고 `W` 및 `b`가 발전하는 모습을 확인합니다."
       ]
     },
     {
@@ -407,11 +407,11 @@
         "id": "DODMMmfLIiOC"
       },
       "source": [
-        "## The same solution, but with Keras\n",
+        "## 같은 솔루션이지만, Keras를 사용한 경우\n",
         "\n",
-        "It's useful to contrast the code above with the equivalent in Keras.\n",
+        "위의 코드를 Keras의 해당 코드와 대조해 보면 유용합니다.\n",
         "\n",
-        "Defining the model looks exactly the same if you subclass `tf.keras.Model`.  Remember that Keras models inherit ultimately from module."
+        "`tf.keras.Model`을 하위 클래스화하면 모델 정의는 정확히 같게 보입니다. Keras 모델은 궁극적으로 모듈에서 상속한다는 것을 기억하세요."
       ]
     },
     {
@@ -485,9 +485,9 @@
         "id": "lrlHODiZccu2"
       },
       "source": [
-        "Keras `fit` expects batched data or a complete dataset as a NumPy array.  NumPy arrays are chopped into batches and default to a batch size of 32.\n",
+        "Keras `fit` 배치 데이터 또는 전체 데이터세트를 NumPy 배열로 예상합니다. NumPy 배열은 배치로 분할되며, 기본 배치 크기는 32입니다.\n",
         "\n",
-        "In this case, to match the behavior of the hand-written loop, you should pass `x` in as a single batch of size 1000."
+        "이 경우 손으로 쓴 루프의 동작과 일치시키려면 `x`를 크기 1000의 단일 배치로 전달해야 합니다."
       ]
     },
     {
@@ -508,7 +508,7 @@
         "id": "8zKZIO9P5s1G"
       },
       "source": [
-        "Note that Keras prints out the loss after training, not before, so the first loss appears lower, but otherwise this shows essentially the same training performance."
+        "Keras는 훈련 전이 아닌 훈련 후 손실을 출력하므로 첫 번째 손실이 더 낮게 나타나지만, 그렇지 않으면 본질적으로 같은 훈련 성능을 보여줍니다."
       ]
     },
     {
@@ -519,11 +519,11 @@
       "source": [
         "## 다음 단계\n",
         "\n",
-        "In this guide, you have seen how to use the core classes of tensors, variables, modules, and gradient tape to build and train a model, and further how those ideas map to Keras.\n",
+        "이 가이드에서는 텐서, 변수, 모듈 및 그래디언트 테이프의 핵심 클래스를 사용하여 모델을 빌드하고 훈련하는 방법과 이러한 아이디어가 Keras에 매핑되는 방법을 살펴보았습니다.\n",
         "\n",
         "This is, however, an extremely simple problem. For a more practical introduction, see [Custom training walkthrough](../tutorials/customization/custom_training_walkthrough.ipynb).\n",
         "\n",
-        "For more on using built-in Keras training loops, see [this guide](keras/train_and_evaluate.ipynb).  For more on training loops and Keras, see [this guide](keras/writing_a_training_loop_from_scratch.ipynb).  For writing custom distributed training loops, see [this guide](distributed_training.ipynb#using_tfdistributestrategy_with_basic_training_loops_loops)."
+        "내장 Keras 훈련 루프의 사용에 관한 자세한 내용은 [이 가이드](keras/train_and_evaluate.ipynb)를 참조하세요. 훈련 루프 및 Keras에 관한 자세한 내용은 [이 가이드](keras/writing_a_training_loop_from_scratch.ipynb)를 참조하세요. 사용자 정의 분산 훈련 루프의 작성에 관해서는 [이 가이드](./guide/distributed_training.ipynb#using_tfdistributestrategy_with_basic_training_loops_loops)를 참조하세요."
       ]
     }
   ],
