Translate post_training_integer_quant_16x8.ipynb via GitLocalize

--- a/site/ko/lite/performance/post_training_integer_quant_16x8.ipynb
+++ b/site/ko/lite/performance/post_training_integer_quant_16x8.ipynb
@@ -37,7 +37,7 @@
         "id": "6Y8E0lw5eYWm"
       },
       "source": [
-        "# Post-training integer quantization with int16 activations"
+        "# int16 활성화를 사용한 훈련 후 정수 양자화"
       ]
     },
     {
@@ -47,13 +47,9 @@
       },
       "source": [
         "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
-        "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://www.tensorflow.org/lite/performance/post_training_integer_quant_16x8\"><img src=\"https://www.tensorflow.org/images/tf_logo_32px.png\">View on TensorFlow.org</a>\n",
-        "  </td>\n",
+        "  <td>     <a target=\"_blank\" href=\"https://www.tensorflow.org/lite/performance/post_training_integer_quant_16x8\"><img src=\"https://www.tensorflow.org/images/tf_logo_32px.png\">TensorFlow.org에서 보기</a>   </td>\n",
         "  <td><a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/tensorflow/blob/master/tensorflow/lite/g3doc/performance/post_training_integer_quant_16x8.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\">Google Colab에서 실행</a></td>\n",
-        "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://github.com/tensorflow/tensorflow/blob/master/tensorflow/lite/g3doc/performance/post_training_integer_quant_16x8.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\">View source on GitHub</a>\n",
-        "  </td>\n",
+        "  <td>     <a target=\"_blank\" href=\"https://github.com/tensorflow/tensorflow/blob/master/tensorflow/lite/g3doc/performance/post_training_integer_quant_16x8.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\">GitHub에서 소스 보기</a>   </td>\n",
         "  <td><a href=\"https://storage.googleapis.com/tensorflow_docs/tensorflow/lite/g3doc/performance/post_training_integer_quant_16x8.ipynb\"><img src=\"https://www.tensorflow.org/images/download_logo_32px.png\">노트북 다운로드</a></td>\n",
         "</table>"
       ]
@@ -64,20 +60,18 @@
         "id": "BTC1rDAuei_1"
       },
       "source": [
-        "## Overview\n",
+        "## 개요\n",
         "\n",
-        "[TensorFlow Lite](https://www.tensorflow.org/lite/) now supports\n",
-        "converting activations to 16-bit integer values and weights to 8-bit integer values during model conversion from TensorFlow to TensorFlow Lite's flat buffer format. We refer to this mode as the \"16x8 quantization mode\". This mode can improve accuracy of the quantized model significantly, when activations are sensitive to the quantization, while still achieving almost 3-4x reduction in model size. Moreover, this fully quantized model can be consumed by integer-only hardware accelerators. \n",
+        "[TensorFlow Lite](https://www.tensorflow.org/lite/)는 이제 TensorFlow에서 TensorFlow Lite의 플랫 버퍼 형식으로 모델을 변환하는 동안 활성화를 16bit 정수 값으로, 가중치를 8bit 정수 값으로 변환하는 작업을 지원합니다. 이 모드를 \"16x8 양자화 모드\"라고 합니다. 이 모드는 활성화가 양자화에 민감할 때 양자화된 모델의 정확성을 크게 향상시키면서도 모델 크기를 거의 3 ~ 4배 줄일 수 있습니다. 또한 이 완전 양자화된 모델은 정수 전용 하드웨어 가속기에서 사용할 수 있습니다.\n",
         "\n",
-        "Some examples of models that benefit from this mode of the post-training quantization include: \n",
-        "* super-resolution, \n",
-        "* audio signal processing such\n",
-        "as noise cancelling and beamforming, \n",
-        "* image de-noising, \n",
-        "* HDR reconstruction\n",
-        "from a single image\n",
+        "이 훈련 후 양자화 모드의 이점을 얻는 모델의 몇 가지 예는 다음과 같습니다.\n",
         "\n",
-        "In this tutorial, you train an MNIST model from scratch, check its accuracy in TensorFlow, and then convert the model into a Tensorflow Lite flatbuffer using this mode. At the end you check the accuracy of the converted model and compare it to the original float32 model. Note that this example demonstrates the usage of this mode and doesn't show benefits over other available quantization techniques in TensorFlow Lite."
+        "- 초고해상도\n",
+        "- 소음 상쇄 및 빔포밍과 같은 오디오 신호 처리\n",
+        "- 이미지 노이즈 제거\n",
+        "- 단일 이미지에서 HDR 재구성\n",
+        "\n",
+        "이 튜토리얼에서는 MNIST 모델을 처음부터 학습시키고 TensorFlow에서 정확성을 확인한 다음, 이 모드를 사용하여 모델을 Tensorflow Lite 플랫 버퍼로 변환합니다. 마지막으로, 변환된 모델의 정확성을 확인하고 원래 float32 모델과 비교합니다. 이 예제는 이 모드의 사용법을 보여주는 것이며 TensorFlow Lite에서 사용 가능한 다른 양자화 기술과 비교한 이점을 보여주지는 않습니다."
       ]
     },
     {
@@ -95,7 +89,7 @@
         "id": "dDqqUIZjZjac"
       },
       "source": [
-        "### Setup"
+        "### 설정"
       ]
     },
     {
@@ -121,7 +115,7 @@
         "id": "srTSFKjn1tMp"
       },
       "source": [
-        "Check that the 16x8 quantization mode is available "
+        "16x8 양자화 모드를 사용할 수 있는지 확인합니다. "
       ]
     },
     {
@@ -201,7 +195,7 @@
         "\n",
         "이제 Python [TFLiteConverter](https://www.tensorflow.org/lite/convert/python_api)를 사용하여 훈련된 모델을 TensorFlow Lite 모델로 변환할 수 있습니다.\n",
         "\n",
-        "Now, convert the model using `TFliteConverter` into default float32 format:"
+        "이제 `TFliteConverter`를 사용하여 모델을 기본 float32 형식으로 변환합니다."
       ]
     },
     {
@@ -255,7 +249,7 @@
         "id": "7BONhYtYocQY"
       },
       "source": [
-        "To instead quantize the model to 16x8 quantization mode, first set the `optimizations` flag to use default optimizations. Then specify that 16x8 quantization mode is the required supported operation in the  target specification:"
+        "대신 모델을 16x8 양자화 모드로 양자화하려면 먼저 기본 최적화를 사용하도록 `optimizations` 플래그를 설정합니다. 그런 다음 16x8 양자화 모드가 대상 사양에서 지원되는 필수 연산임을 지정합니다."
       ]
     },
     {
@@ -276,7 +270,7 @@
         "id": "zLxQwZq9CpN7"
       },
       "source": [
-        "As in the case of int8 post-training quantization, it is possible to produce a fully integer quantized model by setting converter options `inference_input(output)_type` to tf.int16."
+        "int8 훈련 후 양자화의 경우와 마찬가지로, 변환기 옵션 `inference_input(output)_type`을 tf.int16으로 설정하여 완전히 정수 양자화된 모델을 생성할 수 있습니다."
       ]
     },
     {
@@ -285,7 +279,7 @@
         "id": "yZekFJC5-fOG"
       },
       "source": [
-        "Set the calibration data:"
+        "보정 데이터를 설정합니다."
       ]
     },
     {
@@ -312,7 +306,7 @@
         "id": "xW84iMYjHd9t"
       },
       "source": [
-        "Finally, convert the model as usual. Note, by default the converted model will still use float input and outputs for invocation convenience."
+        "마지막으로, 평소와 같이 모델을 변환합니다. 기본적으로 변환된 모델은 호출 편의를 위해 여전히 float 입력 및 출력을 사용합니다."
       ]
     },
     {
@@ -334,7 +328,7 @@
         "id": "PhMmUTl4sbkz"
       },
       "source": [
-        "Note how the resulting file is approximately `1/3` the size."
+        "결과 파일이 약 `1/3` 크기인 것에 주목합니다."
       ]
     },
     {
@@ -542,7 +536,7 @@
         "id": "Km3cY9ry8ZlG"
       },
       "source": [
-        "Repeat the evaluation on the 16x8 quantized model:"
+        "16x8 양자화된 모델에 대해 평가를 반복합니다."
       ]
     },
     {
@@ -566,7 +560,7 @@
         "id": "L7lfxkor8pgv"
       },
       "source": [
-        "In this example, you have quantized a model to 16x8 with no difference in the accuracy, but with the 3x reduced size.\n"
+        "이 예에서는 정확성에 차이가 없지만 3배 축소된 크기로 모델을 16x8로 양자화했습니다.\n"
       ]
     }
   ],
